replace exec by processBuilder